--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.3.0'
     compile project(":libJokes");
     compile project(":jokeScreen");
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
