--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     // Added for AdMob
-    compile 'com.google.android.gms:play-services:7.3.0'
+    freeCompile 'com.google.android.gms:play-services:7.3.0'
     compile project(":libJokes");
     compile project(":jokeScreen");
     compile project(path: ':backend', configuration: 'android-endpoints')
